--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: refit_loader_env
 channels:
   - defaults
 dependencies:
-  - python=3.9.2
-  - numpy=1.20.3
-  - pandas=1.2.4
-  - dask=2021.06.2
-  - json=2.0.9
+  - python>=3.9.2
+  - numpy>=1.20.3
+  - pandas>=1.2.4
+  - dask>=2021.06.2
+  - scikit-learn>=1.1.2
